--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,16 @@ dist-ssr
 coverage
 *.local
 
+# Nuxt dev/build outputs
+.output
+.data
+.nuxt
+.nitro
+.cache
+dist
+
+
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -32,7 +42,12 @@ coverage
 /cypress/videos/
 /cypress/screenshots/
 
-# Vitest
+
 __screenshots__/
-api/connection.php
-public/mockProjects.json
+api/
+**/*mock*
+node_modules/
+.output/
+.nuxt/
+dist/
+.env*
